--- a/web/themes/custom/cassigs_portfolio/css/layout/layout.css
+++ b/web/themes/custom/cassigs_portfolio/css/layout/layout.css
@@ -2,3 +2,15 @@
     max-width: 95%;
     margin: 0 auto;
 }
+
+.layout-sidebar-first{
+    float: left;
+    width: 45%;
+    padding: 10px
+}
+
+.layout-sidebar-second{
+    float: right;
+    width: 45%;
+    padding: 10px
+}
