Adjust layout sidebar padding

--- a/web/themes/custom/cassigs_portfolio/css/layout/responsive.css
+++ b/web/themes/custom/cassigs_portfolio/css/layout/responsive.css
@@ -2,4 +2,20 @@
     .layout-container {
         max-width: 70%;
     }
+
+    .layout-sidebar-first{
+        float: left;
+        width: 45%;
+        padding: 10px
+    }
+    
+    .layout-sidebar-second{
+        float: right;
+        width: 45%;
+        padding: 10px
+    }
+
+    .region-footer {
+        float: right;
+    }
 }
