--- a/web/themes/custom/cassigs_portfolio/css/layout/layout.css
+++ b/web/themes/custom/cassigs_portfolio/css/layout/layout.css
@@ -3,14 +3,12 @@
     margin: 0 auto;
 }
 
-.layout-sidebar-first{
-    float: left;
-    width: 45%;
-    padding: 10px
+.layout-sidebar-first, 
+.layout-sidebar-second {
+    max-width: 95%;
+    padding: 10px 0;
 }
 
-.layout-sidebar-second{
-    float: right;
-    width: 45%;
-    padding: 10px
+.region-footer {
+    clear: both;
 }
